2024-12-12 Se crea nueva version de Conteo Inventario.

--- a/CódigoFuente/BitacorasProduccion/Web.config
+++ b/CódigoFuente/BitacorasProduccion/Web.config
@@ -4,32 +4,30 @@
   https://go.microsoft.com/fwlink/?LinkId=301880
   -->
 <configuration>
-	<configSections>
-		<!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
-		<section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-	</configSections>
-	<appSettings>
-		<add key="webpages:Version" value="3.0.0.0" />
-		<add key="webpages:Enabled" value="false" />
-		<add key="ClientValidationEnabled" value="true" />
-		<add key="UnobtrusiveJavaScriptEnabled" value="true" />
-		<add key="owin:AppStartup" value="IdentitySample.Startup,BitacorasProduccion" />
-		<add key="aspnet:MaxJsonDeserializerMembers" value="3147483647" />
-		<!-- Envio desde lagermex -->
-		<!--
+  <configSections>
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+  </configSections>
+  <appSettings>
+    <add key="webpages:Version" value="3.0.0.0" />
+    <add key="webpages:Enabled" value="false" />
+    <add key="ClientValidationEnabled" value="true" />
+    <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="owin:AppStartup" value="IdentitySample.Startup,BitacorasProduccion" />
+    <add key="aspnet:MaxJsonDeserializerMembers" value="3147483647" />
+    <!-- Envio desde lagermex -->
+    <!--
 		<add key="smtpServer" value="pop4.lagermex.com.mx" />
 		<add key="portEmail" value="25" />
 		<add key="emailSMTP" value="notificaciones.tkmm@lagermex.com.mx" />
 		-->
-		<!--Para desde servidores en azure-->				
-		<add key="smtpServer" value="smtpr-nlb1.tkmx.io" />
-		<add key="portEmail" value="25" />
-		<add key="emailSMTP" value="noreply-tkmm@thyssenkrupp-materials.com" />
-	
-		<add key="paswordEmail" value="" />
-		
-	</appSettings>
-	<!--
+    <!--Para desde servidores en azure-->
+    <add key="smtpServer" value="smtpr-nlb1.tkmx.io" />
+    <add key="portEmail" value="25" />
+    <add key="emailSMTP" value="noreply-tkmm@thyssenkrupp-materials.com" />
+    <add key="paswordEmail" value="" />
+  </appSettings>
+  <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
 
     The following attributes can be set on the <httpRuntime> tag.
@@ -37,110 +35,109 @@
         <httpRuntime targetFramework="4.5" />
       </system.Web>
   -->
-	
-	<system.web>
-		<sessionState timeout="400" />
-		<globalization uiCulture="es" culture="es-MX" />
-		<compilation debug="true" targetFramework="4.7.2" />
-		<httpRuntime maxRequestLength="104857600" targetFramework="4.7.2" />
-		<customErrors mode="RemoteOnly">
-			<error redirect="~/Error/NotFound" statusCode="404" />
-			<error redirect="~/Error/BadRequest" statusCode="400" />
-		</customErrors>
-	</system.web>
-	<system.web.extensions>
-		<scripting>
-			<webServices>
-				<jsonSerialization maxJsonLength="5000000"></jsonSerialization>
-			</webServices>
-		</scripting>
-	</system.web.extensions>
-	<runtime>
-		<assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
-			<dependentAssembly>
-				<assemblyIdentity name="Antlr3.Runtime" publicKeyToken="eb42632606e9261f" />
-				<bindingRedirect oldVersion="0.0.0.0-3.5.0.2" newVersion="3.5.0.2" />
-			</dependentAssembly>
-			<dependentAssembly>
-				<assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" />
-				<bindingRedirect oldVersion="0.0.0.0-12.0.0.0" newVersion="12.0.0.0" />
-			</dependentAssembly>
-			<dependentAssembly>
-				<assemblyIdentity name="System.Web.Optimization" publicKeyToken="31bf3856ad364e35" />
-				<bindingRedirect oldVersion="1.0.0.0-1.1.0.0" newVersion="1.1.0.0" />
-			</dependentAssembly>
-			<dependentAssembly>
-				<assemblyIdentity name="WebGrease" publicKeyToken="31bf3856ad364e35" />
-				<bindingRedirect oldVersion="0.0.0.0-1.6.5135.21930" newVersion="1.6.5135.21930" />
-			</dependentAssembly>
-			<dependentAssembly>
-				<assemblyIdentity name="System.Web.Helpers" publicKeyToken="31bf3856ad364e35" />
-				<bindingRedirect oldVersion="1.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
-			</dependentAssembly>
-			<dependentAssembly>
-				<assemblyIdentity name="System.Web.WebPages" publicKeyToken="31bf3856ad364e35" />
-				<bindingRedirect oldVersion="1.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
-			</dependentAssembly>
-			<dependentAssembly>
-				<assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
-				<bindingRedirect oldVersion="0.0.0.0-5.2.7.0" newVersion="5.2.7.0" />
-			</dependentAssembly>
-			<dependentAssembly>
-				<assemblyIdentity name="Microsoft.Owin" publicKeyToken="31bf3856ad364e35" culture="neutral" />
-				<bindingRedirect oldVersion="0.0.0.0-3.0.1.0" newVersion="3.0.1.0" />
-			</dependentAssembly>
-			<dependentAssembly>
-				<assemblyIdentity name="Microsoft.Owin.Security" publicKeyToken="31bf3856ad364e35" culture="neutral" />
-				<bindingRedirect oldVersion="0.0.0.0-3.0.1.0" newVersion="3.0.1.0" />
-			</dependentAssembly>
-			<dependentAssembly>
-				<assemblyIdentity name="DocumentFormat.OpenXml" publicKeyToken="31bf3856ad364e35" culture="neutral" />
-				<bindingRedirect oldVersion="0.0.0.0-2.0.5022.0" newVersion="2.0.5022.0" />
-			</dependentAssembly>
-			<dependentAssembly>
-				<assemblyIdentity name="System.Runtime.CompilerServices.Unsafe" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
-				<bindingRedirect oldVersion="0.0.0.0-5.0.0.0" newVersion="5.0.0.0" />
-			</dependentAssembly>
-		</assemblyBinding>
-	</runtime>
-	<system.codedom>
-		<compilers>
-			<compiler language="c#;cs;csharp" extension=".cs" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.CSharpCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:default /nowarn:1659;1699;1701" />
-			<compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:default /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
-		</compilers>
-	</system.codedom>
-	<entityFramework>
-		<defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
-			<parameters>
-				<parameter value="v13.0" />
-			</parameters>
-		</defaultConnectionFactory>
-		<providers>
-			<provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
-		</providers>
-	</entityFramework>
-	<connectionStrings>
-		
-		<!--También configurar EnviaCorreo.cs  para productivo/desarrollo-->
-		<!--Productivo AZURE-->		
-		<add name="DefaultConnection" connectionString="Server=10.183.110.7, 60915; Database=Portal_2_0; User Id=ThyssenTest; Password=P0rt4l*; MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
-		<add name="Portal_2_0Entities" connectionString="metadata=res://*/Models.NuevoPortalModel.csdl|res://*/Models.NuevoPortalModel.ssdl|res://*/Models.NuevoPortalModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=10.183.110.7, 60915;initial catalog=Portal_2_0;user id=ThyssenTest;password=P0rt4l*;multipleactiveresultsets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-		<add name="cube_tkmmConnection" connectionString="Server=10.183.110.7, 60915; Database=cube_tkmm; User Id=ThyssenTest; Password=P0rt4l*; MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
-		<!--Productivo PRUEBAS (desarrollo)-->	
-		<!--
+  <system.web>
+    <sessionState timeout="400" />
+    <globalization uiCulture="es" culture="es-MX" />
+    <compilation debug="true" targetFramework="4.7.2" />
+    <httpRuntime maxRequestLength="104857600" targetFramework="4.7.2" />
+    <customErrors mode="RemoteOnly">
+      <error redirect="~/Error/NotFound" statusCode="404" />
+      <error redirect="~/Error/BadRequest" statusCode="400" />
+    </customErrors>
+  </system.web>
+  <system.web.extensions>
+    <scripting>
+      <webServices>
+        <jsonSerialization maxJsonLength="5000000">
+        </jsonSerialization>
+      </webServices>
+    </scripting>
+  </system.web.extensions>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="Antlr3.Runtime" publicKeyToken="eb42632606e9261f" />
+        <bindingRedirect oldVersion="0.0.0.0-3.5.0.2" newVersion="3.5.0.2" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" />
+        <bindingRedirect oldVersion="0.0.0.0-12.0.0.0" newVersion="12.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Web.Optimization" publicKeyToken="31bf3856ad364e35" />
+        <bindingRedirect oldVersion="1.0.0.0-1.1.0.0" newVersion="1.1.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="WebGrease" publicKeyToken="31bf3856ad364e35" />
+        <bindingRedirect oldVersion="0.0.0.0-1.6.5135.21930" newVersion="1.6.5135.21930" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.Owin" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.0.1.0" newVersion="3.0.1.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.Owin.Security" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.0.1.0" newVersion="3.0.1.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="DocumentFormat.OpenXml" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-2.0.5022.0" newVersion="2.0.5022.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Runtime.CompilerServices.Unsafe" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.0.0.0" newVersion="5.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Web.Helpers" publicKeyToken="31bf3856ad364e35" />
+        <bindingRedirect oldVersion="1.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Web.WebPages" publicKeyToken="31bf3856ad364e35" />
+        <bindingRedirect oldVersion="1.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
+        <bindingRedirect oldVersion="1.0.0.0-5.2.9.0" newVersion="5.2.9.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
+  <system.codedom>
+    <compilers>
+      <compiler language="c#;cs;csharp" extension=".cs" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.CSharpCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:default /nowarn:1659;1699;1701" />
+      <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:default /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
+    </compilers>
+  </system.codedom>
+  <entityFramework>
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
+      <parameters>
+        <parameter value="v13.0" />
+      </parameters>
+    </defaultConnectionFactory>
+    <providers>
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+    </providers>
+  </entityFramework>
+  <connectionStrings>
+    <!--También configurar EnviaCorreo.cs  para productivo/desarrollo-->
+    <!--Productivo AZURE-->
+    <add name="DefaultConnection" connectionString="Server=10.183.110.7, 60915; Database=Portal_2_0; User Id=ThyssenTest; Password=P0rt4l*; MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
+    <add name="Portal_2_0Entities" connectionString="metadata=res://*/Models.NuevoPortalModel.csdl|res://*/Models.NuevoPortalModel.ssdl|res://*/Models.NuevoPortalModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=10.183.110.7, 60915;initial catalog=Portal_2_0;user id=ThyssenTest;password=P0rt4l*;multipleactiveresultsets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="cube_tkmmConnection" connectionString="Server=10.183.110.7, 60915; Database=cube_tkmm; User Id=ThyssenTest; Password=P0rt4l*; MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
+    <!--Productivo PRUEBAS (desarrollo)-->
+    <!--
 		<add name="DefaultConnection" connectionString="Server=10.183.110.7, 62962; Database=Portal_2_0_scdm; User Id=ThyssenTest; Password=P0rt4l*; MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
 		<add name="cube_tkmmConnection" connectionString="Server=10.183.110.7, 62962; Database=cube_tkmm; User Id=ThyssenTest; Password=P0rt4l*; MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
 		<add name="Portal_2_0Entities" connectionString="metadata=res://*/Models.NuevoPortalModel.csdl|res://*/Models.NuevoPortalModel.ssdl|res://*/Models.NuevoPortalModel.msl;provider=System.Data.SqlClient;provider connection string='data source=&quot;10.183.110.7,  62962&quot;;initial catalog=Portal_2_0_scdm;persist security info=True;user id=ThyssenTest;password=P0rt4l*;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework'" providerName="System.Data.EntityClient" />
 		-->
-	</connectionStrings>
-	<system.serviceModel>
-		<bindings>
-			<basicHttpBinding>
-				<binding name="WebServiceBasculasSoap" />
-			</basicHttpBinding>
-		</bindings>
-		<client>
-			<endpoint address="http://10.121.24.5:8050/WebServiceBasculas.asmx" binding="basicHttpBinding" bindingConfiguration="WebServiceBasculasSoap" contract="ServiceReferenceBasculas.WebServiceBasculasSoap" name="WebServiceBasculasSoap" />
-		</client>
-	</system.serviceModel>
+  </connectionStrings>
+  <system.serviceModel>
+    <bindings>
+      <basicHttpBinding>
+        <binding name="WebServiceBasculasSoap" />
+      </basicHttpBinding>
+    </bindings>
+    <client>
+      <endpoint address="http://10.121.24.5:8050/WebServiceBasculas.asmx" binding="basicHttpBinding" bindingConfiguration="WebServiceBasculasSoap" contract="ServiceReferenceBasculas.WebServiceBasculasSoap" name="WebServiceBasculasSoap" />
+    </client>
+  </system.serviceModel>
 </configuration>
