--- a/CódigoFuente/BitacorasProduccion/packages.config
+++ b/CódigoFuente/BitacorasProduccion/packages.config
@@ -2,7 +2,7 @@
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net472" />
   <package id="bootstrap" version="4.6.0" targetFramework="net472" />
-  <package id="DocumentFormat.OpenXml" version="2.5" targetFramework="net45" />
+  <package id="DocumentFormat.OpenXml" version="2.11.3" targetFramework="net472" />
   <package id="EntityFramework" version="6.4.4" targetFramework="net472" />
   <package id="ExcelDataReader" version="3.6.0" targetFramework="net45" />
   <package id="ExcelDataReader.DataSet" version="3.6.0" targetFramework="net45" />
@@ -53,9 +53,12 @@
   <package id="Portable.BouncyCastle" version="1.8.9" targetFramework="net472" />
   <package id="QRCoder" version="1.5.1" targetFramework="net472" />
   <package id="Respond" version="1.2.0" targetFramework="net472" />
-  <package id="SpreadsheetLight" version="3.4.9" targetFramework="net45" />
+  <package id="SpreadsheetLight" version="3.5.0" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
   <package id="System.Diagnostics.DiagnosticSource" version="5.0.0" targetFramework="net472" />
+  <package id="System.Drawing.Common" version="5.0.0" targetFramework="net472" />
+  <package id="System.IO.FileSystem.Primitives" version="4.3.0" targetFramework="net472" />
+  <package id="System.IO.Packaging" version="4.7.0" targetFramework="net472" />
   <package id="System.Memory" version="4.5.4" targetFramework="net472" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="5.0.0" targetFramework="net472" />
