2025-02-05 Se agrega nuevo portal de ideas de mejora.

--- a/CódigoFuente/Bitacoras/Clases.csproj
+++ b/CódigoFuente/Bitacoras/Clases.csproj
@@ -68,6 +68,7 @@
     <Compile Include="Util\GV_solicitud_estatus.cs" />
     <Compile Include="Util\GV_tipo_departamento.cs" />
     <Compile Include="Util\ImageUtil.cs" />
+    <Compile Include="Util\IM_EstatusConstantes.cs" />
     <Compile Include="Util\IT_equipos_actividad_estatus.cs" />
     <Compile Include="Util\IT_equipos_checklist_estatus.cs" />
     <Compile Include="Util\IT_matenimiento_Estatus.cs" />
